# doctor-data-scraper

./: .gitignore  Makefile  README.md  doctor_data_scraper.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CASE_STUDY.md
scripts/: run_scraper.py
src/doctor_scraper/: __init__.py  fetch.py  parse.py  pipeline.py
src/doctor_scraper/api/: main.py
tests/: test_api.py  test_parse.py  test_pipeline.py
