[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctor-data-scraper"
version = "0.2.0"
description = "Doctor profile extraction pipeline with API and batch export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
  "pandas>=2.2.2",
  "openpyxl>=3.1.5",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "httpx>=0.27.0",
  "ruff>=0.5.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
